--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prism-data-insight-platform",
+  "name": "moguo-prism",
   "private": true,
   "version": "0.0.0",
   "type": "module",
